Fix compilation failure introduced by CL 98712
[git-p4: depot-paths = "//dev/coherence-ce/release/coherence-ce-v22.06/": change = 98722]